k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstore-deployment
  namespace: petstore
  labels:
    app: petstore
    app.kubernetes.io/name: petstore
    app.kubernetes.io/instance: petstore-prod
    app.kubernetes.io/part-of: petstore-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: petstore
  template:
    metadata:
      labels:
        app: petstore
        app.kubernetes.io/name: petstore
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - petstore
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: petstore
          image: mukeshchaudhary14/petstore-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 768Mi
          livenessProbe:
            httpGet:
              path: /jpetstore/
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /jpetstore/
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 2
